Text align fixed

--- a/src/scss/layout/_members.scss
+++ b/src/scss/layout/_members.scss
@@ -13,7 +13,7 @@
     position: relative;
     margin: auto;
 
-    @media all and (min-width: 1200px) {
+    @media all and (min-width: 768px) {
       height: 205px;
       width: 205px;
       padding-top: 4px;
@@ -92,26 +92,23 @@
       margin-right: 45px;
       padding-top: 10px;
 
-      &__descriptions {
+      .members__descriptions {
         margin-left: 29px;
+        text-align: left;
 
         &--names {
-          text-align: left;
           margin-bottom: 10px;
-
-          p {
-            text-align: left;
-            margin: 0;
-            padding: 0;
-          }
         }
+        p {
+          margin: 0;
+          padding: 0;
+        }
+      }
+      .members__socialmedia {
+        align-self: start;
 
-        &__socialmedia {
-          align-self: start;
-
-          &--logos {
-            justify-content: flex-start;
-          }
+        &--logos {
+          justify-content: flex-start;
         }
       }
     }
@@ -122,21 +119,18 @@
       margin-left: 45px;
       margin-right: 45px;
 
-      &__descriptions {
+      .members__descriptions {
         margin-right: 29px;
+        text-align: right;
 
+        &--names {
+          margin-bottom: 10px;
+        }
         p {
-          text-align: right;
           margin: 0;
           padding: 0;
         }
-
-        &--names {
-          text-align: right;
-          margin-bottom: 10px;
-        }
-
-        &__social-media {
+        .members__socialmedia {
           align-self: flex-end;
 
           &--logos {
